# compare_image

./: .gitignore  CLAUDE.md  purpose.md  pyproject.toml  schema.md
.claude/: settings.json
docs/architecture/: domain_model.md
scripts/: benchmark_algorithms.py  run_benchmark.sh
specs/PRD/: prd-001-image-compare.md
specs/URD/: urd-001-image-compare.md
wiki/: index.md  log.md  overview.md
wiki/comparisons/: algorithm-benchmark-2026.md
wiki/concepts/: aliked.md  lightglue.md  orb.md  xfeat.md
wiki/decisions/: adr-001-xfeat-primary-strategy.md
wiki/entities/: image-feature.md  query-image.md  similarity-result.md  video-frame.md
wiki/specs/: spec-001-image-compare.md
